got lists on project dashboard, now need a screen...

--- a/client/app/partials/lists.html
+++ b/client/app/partials/lists.html
@@ -1,12 +1,12 @@
 <div class="row-fluid">
     <div class="span12">
-        <h3> All Lists</h3>
+        <h3> Custom Lists</h3>
     </div>
 </div>
 <div class="row-fluid">
     <div class="span3">
-            <ul class="dropdown-menu">
-                <li ng-repeat="list in projectLists">
+            <ul class="unstyled">
+                <li ng-repeat="list in objectInstances|filter ">
                     <!--<a data-ng-click="projectFieldsForCreate(type)">{{ type.name }}</a>-->
                     <a  ng-click="showList(list)">{{list.name}}</a>
                 </li>
