--- a/client/app/partials/lists.html
+++ b/client/app/partials/lists.html
@@ -4,14 +4,13 @@
     </div>
 </div>
 <div class="row-fluid">
-    <div class="span3">
-            <ul class="unstyled">
-                <li ng-repeat="list in objectInstances|filter ">
-                    <!--<a data-ng-click="projectFieldsForCreate(type)">{{ type.name }}</a>-->
-                    <a  ng-click="showList(list)">{{list.name}}</a>
-                </li>
-            </ul>
-        </div>
+    <div class="span12">
+    {{currentProject}}
+    instances
+    {{listInstances}}
+    <br>
+    {{viewFields}}
+    </div>
     </div>
 </div>
 
