--- a/client/app/partials/projectdashboard.html
+++ b/client/app/partials/projectdashboard.html
@@ -8,7 +8,7 @@
          <span>Project Status</span>
          <div class="progress progress-success">
             <div class="bar" style="width: 60%;"></div>
-        </div>z
+        </div>
     </div>
     <div class="span4">
         <div class="dropdown pull-right">
