highcharts, just need to add data

--- a/client/app/partials/reports.html
+++ b/client/app/partials/reports.html
@@ -4,8 +4,8 @@
     <title>Reports</title>
 </head>
 <body>
-Project Task, Assets and News
 
-{{allProjects}}
+`<highchart id="projectActivity" config="chartConfig"></highchart>`
+
 </body>
 </html>
