--- a/client/app/css/app.css
+++ b/client/app/css/app.css
@@ -36,3 +36,12 @@ body {
   content: "";
   padding: 0;
 }
+
+.done-true {
+    text-decoration: line-through;
+    color: grey;
+}
+
+.done-false {
+    text-decoration: none;
+}
