--- a/client/app/partials/modalProjectCreate.html
+++ b/client/app/partials/modalProjectCreate.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h3>Create New Project</h3>
+    <h3>Create New Item</h3>
 </div>
 <div class="modal-body">
     <form>
