--- a/client/app/partials/projectdashboard.html
+++ b/client/app/partials/projectdashboard.html
@@ -1,4 +1,4 @@
-<div data-ng-init="findOne()"></div>
+<div data-ng-init="findOne()" xmlns="http://www.w3.org/1999/html"></div>
 
 <div class="row-fluid">
     <div class="span4">
@@ -73,38 +73,49 @@
                 <li>Tasks <i class="fa fa-edit" ng-click="taskEditorEnabled=!taskEditorEnabled"></i></li>
             </ul>
         </div>
-        <div class=""span12">
-            <form class="form-horizontal well" ng-show="taskEditorEnabled">
-                <fieldset>
-                    <div class="control-group">
-                        <label>Task Title</label>
-                        <input type="text" class="input-xlarge" id="name" data-ng-model="task.name">
-                    </div>
-                    <div class="control-group">
-                        <label>Due Date</label>
-                        <input type="text" class="input" placeholder="When" datepicker-popup="dd-MM-yy" show-weeks="0" datepicker-options="dateOptions" data-ng-model="task.date">
-                    </div>
-                    <div class="control-group">
-                        <label>Assign To</label>
-                        <input type="text" class="input" placeholder="Who" data-ng-model="task.who">
-                    </div>
-                    <div class="form-actions">
-                        <button type="submit" class="btn btn-primary" data-ng-click="AddTask(task)">Save</button>
-                        <button type="reset" class="btn" ng-click="taskEditorEnabled=!taskEditorEnabled">Done</button>
-                    </div>
-                    <!---->
-                        <!---->
-                        <!--<button type="submit" data-ng-click="AddTask(task)" data-ng-show="task.name" class="btn btn-primary">Post</button>-->
-                </fieldset>
-            </form>
-       </div>
-
+        <form class="form-horizontal well" ng-show="taskEditorEnabled">
+            <fieldset>
+                <div class="control-group">
+                    <label>Task Title</label>
+                    <input type="text" class="input-xlarge" id="name" data-ng-model="task.name">
+                </div>
+                <div class="control-group">
+                    <label>Due Date</label>
+                    <input type="text" class="input" placeholder="When" datepicker-popup="dd-MM-yy" show-weeks="0" datepicker-options="dateOptions" data-ng-model="task.date">
+                </div>
+                <div class="control-group">
+                    <label>Assign To</label>
+                    <input type="text" class="input" placeholder="Who" data-ng-model="task.who">
+                </div>
+                <div class="form-actions">
+                    <button type="submit" class="btn btn-primary" data-ng-click="AddTask(task)">Save</button>
+                    <button type="reset" class="btn" ng-click="taskEditorEnabled=!taskEditorEnabled">Done</button>
+                </div>
+            </fieldset>
+        </form>
 
     <ul class="unstyled">
             <li ng-repeat="task in project.tasks | orderBy:'date':true">
-                <div class="span6">{{ task.name }} </div>
-                <div class="span3"><span am-time-ago="task.date"></span></div>
-                <div class="span3">{{ task.who }}</span></div>
+                <div class="span1">
+                    <input type="checkbox" ng-model="task.done" id="chk{{$index}}" data-ng-click="updateTask(task)"/>
+                </div>
+                <div class="span6">
+                    <label for="chk{{$index}}" data-ng-class="{'done-true': task.done, 'done-false': !task.done}">
+                    {{ task.name }}
+                    </label>
+                </div>
+                <div class="span3">
+                    <label for="chk{{$index}}" data-ng-class="{'done-true': task.done, 'done-false': !task.done}">
+                        <span class="pull-right" am-time-ago="task.date"></span>
+                    </label>
+                </div>
+                <div class="span2">
+                    <label for="chk{{$index}}" data-ng-class="{'done-true': task.done, 'done-false': !task.done}">
+                        <span class="pull-right">
+                            {{ task.who }}
+                        </span>
+                    </label>
+                </div>
             </li>
         </ul>
     </div>
